@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.2 2006/09/16 11:29:16 wiz Exp $
-
-SHA1 (rarlinux-3.6.0.tar.gz) = 4b43766371fd2f117fb3af5826001a7eab7a0f3b
-RMD160 (rarlinux-3.6.0.tar.gz) = c0f6d19738f69deb9fd75589e461a7a0ed430d39
-Size (rarlinux-3.6.0.tar.gz) = 752997 bytes
