@@ -1,6 +1,13 @@
-    The rar archiver adds and extracts files to and from an archive. The
-    archive is usually a regular file, which name has ".rar" suffix in its
-    end. Archive could be a media like a floppy diskette, tape or any other
-    storage device.
+RAR is a powerful tool allowing you to manage and control archive
+files.
 
-    *** You will need COMPAT_12 in your kernel for this to work. ***
+RAR features include:
+
+*  Highly sophisticated, original compression algorithm
+*  Special compression algorithms optimized for text, audio,
+   graphics data, 32 and 64-bit Intel executables
+*  Better compression than similar tools, using 'solid' archiving
+*  Authenticity verification (registered version only)
+*  Self-extracting archives and volumes (SFX)
+*  Ability to recover physically damaged archives
+*  Locking, password, file order list, file security & more ...
