@@ -1,7 +1,6 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.1.1.1 2006/03/03 22:36:09 wiz Exp $
+$NetBSD: MESSAGE.linux-i386,v 1.1 2007/08/22 16:43:33 jlam Exp $
 
 For best compression performance, please install
 ${PREFIX}/share/doc/rar-bin/rarfiles.lst into /etc.
-
 ===========================================================================
